Tentando rodar no gitpod

--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -1,13 +1,11 @@
 {
   "type": "postgres",
-  "host": "localhost",
+  "host": "127.0.0.1",
   "port": 5432,
-  "username": "postgres",
+  "username": "gitpod",
+  "database": "postgres",
   "password": "docker",
-  "database": "gostack_gobarber",
-  "entities": [
-    "./src/models/*.ts"
-  ],
+  "entities": ["./src/models/*.ts"],
   "migrations": ["./src/database/migrations/*.ts"],
   "cli": {
     "migrationsDir": "./src/database/migrations"
