--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-node_modules
+node_modules/
+.idea/
+.vscode/
+.build/
+.env
+ormconfig.json
+coverage
+tmp/
+.theia/
+.gitpod.Dockerfile
+.gitpod.yml
+
+.theia/*
+tmp/*
+!tmp/.gitkeep
