--- a/backend/package.json
+++ b/backend/package.json
@@ -16,15 +16,22 @@
     "@types/jest": "^26.0.4",
     "@types/multer": "^1.4.3",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^12.1.2",
+    "class-transformer": "^0.2.3",
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.9",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "pg": "^8.2.1",
+    "rate-limiter-flexible": "^2.1.9",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
@@ -33,8 +40,12 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
+    "@types/hapi__joi": "^17.1.4",
+    "@types/ioredis": "^4.17.2",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.25",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.25",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "eslint": "6.8.0",
