Finalizando backend do App feito

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,13 @@ APP_WEB_URL=http://localhost:3333
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
+
+MAIL_DRIVER=ethereal
+
+STORAGE_DRIVER=disk
+
+#AWS Credentials
+
+AWS_SECRET_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
