--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.6",
     "@types/jest": "^26.0.4",
     "@types/multer": "^1.4.3",
+    "aws-sdk": "^2.721.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.1.2",
     "class-transformer": "^0.2.3",
@@ -26,6 +27,7 @@
     "handlebars": "^4.7.6",
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.6",
     "mongodb": "^3.5.9",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
